--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Blog Title"
+title: "Math as Tool"
 author: "Math_as_Tool"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
@@ -20,9 +20,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Github, icon: github, url: "https://github.com/omniscientreaderfourthwall"}
+ 
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
